<resources>
    <string name="app_name">Math Sucks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="of">Of</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_percentage">Enter Percentage</string>
    <string name="textview">TextView</string>
    <string name="what_is">What is</string>
    <string name="calculate">Calculate</string>
    <string name="_0">0</string>
</resources>